--- a/_includes/qr_scanner.html
+++ b/_includes/qr_scanner.html
@@ -104,6 +104,7 @@
             if (url.startsWith('http://') || url.startsWith('https://')) {
               // Navigate to the URL on your local server (assuming your local server's address is "http://127.0.0.1:4000/")
               window.location.href = url.replace('http://', 'https://www.kpks.us/'); //'http://127.0.0.1:4000/');
+              stopScanning();
             } else {
               console.log('Invalid URL detected in QR code');
             }
