--- a/_includes/qr_scanner.html
+++ b/_includes/qr_scanner.html
@@ -91,8 +91,14 @@
   async function scan() {
     if (video.readyState === video.HAVE_ENOUGH_DATA) {
       const preProcessedImage = preProcess();
-
-      const symbols = await zbarWasm.scanImageData(preProcessedImage);
+      const scanner = await zbarWasm.getDefaultScanner();
+      scanner.setConfig(
+      	zbarWasm.ZBarSymbolType.ZBAR_NONE, /* "None" for "All", design by original ZBar library */
+      	zbarWasm.ZBarConfigType.ZBAR_CFG_ENABLE, /* The field you want to change */
+      	0 /* 0 for disable */
+      );
+      scanner.setConfig(zbarWasm.ZBarSymbolType.ZBAR_QRCODE, zbarWasm.ZBarConfigType.ZBAR_CFG_ENABLE, 1);
+      const symbols = await zbarWasm.scanImageData(preProcessedImage, scanner);
       symbols.forEach(s => s.rawValue = s.decode('utf-8'));
       symbols.forEach(symbol => {
         code = symbol.rawValue;
