--- a/_includes/qr_scanner.html
+++ b/_includes/qr_scanner.html
@@ -1,5 +1,5 @@
 <canvas id="canvas" class="z-40 fixed -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 hidden"
-  width="1280" height="720">
+  width="320" height="240">
 </canvas>
 <video id="video"
   class="z-30 fixed w-80 -translate-x-1/2 -translate-y-1/2 scale-x-[-1] top-1/2 left-1/2 rounded-lg transition delay-150"
@@ -17,7 +17,7 @@
   const context = canvas.getContext("2d", { willReadFrequently: true }, { alpha: false });
   const spinner = document.getElementById('spinner');
 
-  // Establist zxing from zxing_reader.js
+  // Establish zxing from zxing_reader.js
   var zxing = ZXing().then(function (instance) {
     zxing = instance; // this line is supposedly not required but with current emsdk it is :-/
   });
